Fix navbar icon spacing
Icons are now aligned, and the navbar width has been adjusted

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
     height: 100vh;
     background-color: var(--bg-color);
     display: grid;
-    grid-template-columns: minmax(min-content,250px) 1fr;
+    grid-template-columns: minmax(min-content,300px) 1fr;
     grid-template-rows: auto 1fr;
     grid-template-areas: 
         "nav header"
@@ -36,7 +36,8 @@ nav{
     display: flex;
     gap:0.75em;
     flex-direction: column;
-    padding: 1em;
+    padding-block: 1rem;
+    padding-left: 2rem;
 
 }
 
@@ -55,6 +56,10 @@ nav a{
     color: white;
     text-decoration: none;
     font-size: 1.25rem;
+}
+
+nav ul{
+    padding: 0;
 }
 
 ul{
